--- a/index.html
+++ b/index.html
@@ -12,21 +12,21 @@
     <meta name="twitter:title" content="FishEye | Site web de photographes freelances">
     <meta name="twitter:description" content="Site web de photographes freelances">
     <meta name="twitter:site" content="@fisheye">
-    <link href="css/style.css" rel="stylesheet" type="text/css" >
-    <link rel="icon" type="image/png" href="assets/favicon.png">
+    <link href="src/css/style.css" rel="stylesheet" type="text/css" >
+    <link rel="icon" type="image/png" href="src/assets/favicon.png">
     <link href="https://fonts.googleapis.com/css?family=DM+Sans&display=swap" rel="stylesheet">
     <title>FishEye</title>
   </head>
 
   <body>
     <header>
-        <img src="assets/images/logo.png" class="logo" alt="fisheye logo"/>
+        <img src="src/assets/images/logo.png" class="logo" alt="fisheye logo"/>
         <h1>Nos photographes</h1>
     </header>
     <main id="main">
         <div class="photographer_section"></div>
     </main>
-    <script src="scripts/templates/photographer.js"></script>
-    <script src="scripts/pages/index.js"></script>
+    <script src="src/scripts/templates/photographer.js"></script>
+    <script src="src/scripts/pages/index.js"></script>
   </body>
 </html>
