--- a/photographer.html
+++ b/photographer.html
@@ -62,7 +62,7 @@
             <div class="title_under-photo">
                 <span class="pic_under-title" id="counter-1-title">Arc-en-ciel</span>
                 <span class="pic_under-likes" id="counter-1-likes">0</span>
-                <img class="heart" src="assets/icons/heart-solid.svg" onclick="countClicks()"  alt="coeur"/>
+<!--                <img class="heart" src="assets/icons/heart-solid.svg" onclick="countClicks()"  alt="coeur"/>-->
                 <p id="output"></p>
             </div>
         </div>
@@ -72,7 +72,7 @@
             <div class="title_under-photo">
                 <span id="counter-2-title" class="pic_under-title">Solitude</span>
                 <span id="counter-2-likes" class="pic_likes">0</span>
-                <img class="heart" src="assets/icons/heart-solid.svg" onclick="incrementCounter(2)"  alt="coeur"/>
+<!--                <img class="heart" src="assets/icons/heart-solid.svg" onclick="incrementCounter(2)"  alt="coeur"/>-->
             </div>
         </div>
 
@@ -81,7 +81,7 @@
             <div class="title_under-photo">
                 <span id="counter-3-title" class="pic_under-title">Mariage à la mer</span>
                 <span id="counter-3-likes" class="pic_likes">0</span>
-                <img class="heart" src="assets/icons/heart-solid.svg" onclick="incrementCounter(3)"/>
+<!--                <img class="heart" src="assets/icons/heart-solid.svg" onclick="incrementCounter(3)"/>-->
             </div>
         </div>
 
