--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
   </head>
 
   <body>
+  <div id="name"></div>
     <header>
         <img src="src/assets/images/logo.png" class="logo" alt="fisheye logo"/>
         <h1>Nos photographes</h1>
