--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
   </head>
 
   <body>
-  <div id="photographers-container"></div>
     <header>
         <img src="src/assets/images/logo.png" class="logo" alt="fisheye logo"/>
         <h1>Nos photographes</h1>
     </header>
+    <div id="photographers-list"></div>
     <main id="main">
         <div class="photographer_section"></div>
     </main>
