--- a/index.html
+++ b/index.html
@@ -23,10 +23,11 @@
         <img src="src/assets/images/logo.png" class="logo" alt="fisheye logo"/>
         <h1>Nos photographes</h1>
     </header>
-    <div id="photographers-list"></div>
+    <div id="photographers-list">
     <main id="main">
         <div class="photographer_section"></div>
     </main>
+    </div>
     <script src="src/scripts/templates/photographer.js"></script>
     <script src="src/scripts/pages/index.js"></script>
   </body>
