--- a/photographer.html
+++ b/photographer.html
@@ -13,8 +13,10 @@
     </header>
     <main id="main">
       <div class="photograph-header">
-<div class="photographers-list"></div>
-        <button class="contact_button" onclick="displayModal()">Contactez-moi</button>
+          <button class="contact_button" onclick="displayModal()">Contactez-moi</button>
+<div id="photographers-list"></div>
+
+
       </div>
         </div>
         </div>
@@ -54,8 +56,7 @@
 
 
 
-  <script src="src/scripts/templates/photographer.js">
+  <script src="src/scripts/pages/photographer.js"></script>
     <script src="src/scripts/utils/contactForm.js"></script>
-    <script src="path/to/your/script.js" defer></script>
   </body>
 </html>
