fix: photographer photo visible

--- a/photographer.html
+++ b/photographer.html
@@ -13,8 +13,9 @@
     </header>
     <main id="main">
       <div class="photograph-header">
+          <div id="photographers-banner"></div>
           <button class="contact_button" onclick="displayModal()">Contactez-moi</button>
-<div id="photographers-list"></div>
+          <div id="photographers-image"></div>
 
 
       </div>
