fix: photo done, other photographer done

--- a/photographer.html
+++ b/photographer.html
@@ -12,13 +12,15 @@
       <img src="src/assets/images/logo.png" class="logo" />
     </header>
     <main id="main">
+        <div class="photographer-form">
       <div class="photograph-header">
           <div id="photographers-banner"></div>
           <button class="contact_button" onclick="displayModal()">Contactez-moi</button>
           <div id="photographers-image"></div>
-
-
       </div>
+</div>
+            <div id="image-photo"></div>
+
         </div>
         </div>
     </main>
