fix: element visible next step style

--- a/photographer.html
+++ b/photographer.html
@@ -21,16 +21,15 @@
     </div>
 
 
-
-
-
-
     <div id="container-photo">
         <div class="picture-container">
             <img class="picture-image" src="src/assets/images/243/Travel_Lonesome.jpg" alt="Lonesome">
             <div class="picture-details">
                 <div> loremipsumaadadadadaa </div>
                 <div> 10 likes</div>
+
+                <video class="picture-video" controls >
+<!--                    <source src="src/assets/images/930/Sport_Tricks_in_the_air.mp4" type="video/webm" />-->
             </div>
         </div>
 
