--- a/photographer.html
+++ b/photographer.html
@@ -22,13 +22,13 @@
 
 
     <div id="container-photo">
-        <div class="picture-container">
-            <img class="picture-image" src="src/assets/images/243/Travel_Lonesome.jpg" alt="Lonesome">
-            <div class="picture-details">
-                <div> loremipsumaadadadadaa </div>
-                <div> 10 likes</div>
+<!--        <div class="picture-container">-->
+<!--            <img class="picture-image" src="src/assets/images/243/Travel_Lonesome.jpg" alt="Lonesome">-->
+<!--            <div class="picture-details">-->
+<!--                <div> loremipsumaadadadadaa </div>-->
+<!--                <div> 10 likes</div>-->
 
-                <video class="picture-video" controls >
+                <video class="picture-video"  >
 <!--                    <source src="src/assets/images/930/Sport_Tricks_in_the_air.mp4" type="video/webm" />-->
             </div>
         </div>
