fix: video done

--- a/photographer.html
+++ b/photographer.html
@@ -14,9 +14,13 @@
 <main id="main">
     <div class="photographer-form">
         <div class="photograph-header">
+            <div> Paris </div>
+            <div class="banner-style">
             <div id="photographers-banner"></div>
+                </div>
             <button class="contact_button" onclick="displayModal()">Contactez-moi</button>
             <div id="photographers-image"></div>
+
         </div>
     </div>
 
@@ -28,7 +32,7 @@
 <!--                <div> loremipsumaadadadadaa </div>-->
 <!--                <div> 10 likes</div>-->
 
-                <video class="picture-video"  >
+
 <!--                    <source src="src/assets/images/930/Sport_Tricks_in_the_air.mp4" type="video/webm" />-->
             </div>
         </div>
