--- a/photographer.html
+++ b/photographer.html
@@ -13,12 +13,25 @@
 </header>
 <main id="main">
     <div class="photographer-form">
+        <div class="header-form">
+
         <div class="photograph-header">
-            <div> Paris </div>
+            <div class="style-button">
+            <button class="contact_button" onclick="displayModal()">Contactez-moi</button>
+            </div>
+            </div>
+
+<!--            <div class="photograph-details">-->
+<!--                <div class="header-name"></div>-->
+<!--            <div class="location-form"> Paris </div>-->
+<!--            <div> Beau dans le quotidien </div>-->
+
+                </div>
+
             <div class="banner-style">
             <div id="photographers-banner"></div>
                 </div>
-            <button class="contact_button" onclick="displayModal()">Contactez-moi</button>
+
             <div id="photographers-image"></div>
 
         </div>
