fix: counter done + incrementation

--- a/photographer.html
+++ b/photographer.html
@@ -85,7 +85,7 @@
 </div>
 
 <div class="photo-list"></div>
-
+<div id="nav-bar"></div>
 
 
 <script src="src/scripts/pages/photographer.js"></script>
