fix : picture showed in modal on click

--- a/photographer.html
+++ b/photographer.html
@@ -12,13 +12,12 @@
 <div class="carouselModal">
 
 
-    <span class="close">&times;</span>
-    <div class="carousel-content">
-        <div class="arrow"><</div>
-        <img id="carouselImage" src="src/assets/images/930/Architecture_Cross_Bar.jpg" alt="carousel image">
-        <div class="exit">X</div>
-        <div class="arrow">></div>
-    </div>
+<!--    <span class="close">&times;</span>-->
+<!--    <div class="carousel-content">-->
+<!--        <div class="arrow"><</div>-->
+<!--        <img class="carouselImage" src="src/assets/images/930/Architecture_Cross_Bar.jpg" alt="carousel image">-->
+<!--        <div class="arrow-reverse">></div>-->
+<!--    </div>-->
 </div>
 
 <!--chaque image a besoin d'un lien ( for each) cliquable pour aller dans modal) -->
